# cpp-cmake-starter

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  run.sh
src/: core.cpp  core.h  main.cpp
